WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
153058
[EFL] Fix wrong return value of paintThemePart in RenderThemeEfl
https://bugs.webkit.org/show_bug.cgi?id=153058
Summary
[EFL] Fix wrong return value of paintThemePart in RenderThemeEfl
Gyuyoung Kim
Reported
2016-01-12 22:58:34 PST
To return false in paint functions in RenderThemeEfl means that it is supported though, paintThemePart has returned false even when failing to get image cache of theme. Inpired by
r194955
.
Attachments
Patch
(1.59 KB, patch)
2016-01-12 22:59 PST
,
Gyuyoung Kim
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gyuyoung Kim
Comment 1
2016-01-12 22:59:42 PST
Created
attachment 268860
[details]
Patch
WebKit Commit Bot
Comment 2
2016-01-13 00:02:12 PST
Comment on
attachment 268860
[details]
Patch Clearing flags on attachment: 268860 Committed
r194957
: <
http://trac.webkit.org/changeset/194957
>
WebKit Commit Bot
Comment 3
2016-01-13 00:02:15 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug